// lib/models/bread.dart

class Bread {
  final String type;

  Bread(this.type);
}
