// lib/models/filling.dart

class Filling {
  final String name;

  Filling(this.name);
}
